quil-rs/src/program/scheduling/snapshots/quil_rs__program__scheduling__graph__tests__write_capture_read.snap
---
source: quil-rs/src/program/scheduling/graph.rs
expression: dot_format
---
digraph {
  entry -> "block_0_start";
  entry [label="Entry Point"];
  subgraph cluster_0 {
    label="block_0";
    node [style="filled"];
    "block_0_start" [shape=circle, label="start"];
    "block_0_start" -> "block_0_0" [label="ordering"];
    "block_0_0" [shape=rectangle, label="[0] LOAD bits[0] bits2 integers[0]"];
    "block_0_0" -> "block_0_1" [label="await write"];
    "block_0_1" [shape=rectangle, label="[1] NONBLOCKING CAPTURE 0 \"Transmon-0_readout_rx\" flat(detuning: 0, duration: 2.0000000000000003e-6, iq: 1, phase: 0.8745492960861506, scale: 1) bits[0]"];
    "block_0_1" -> "block_0_2" [label="await capture"];
    "block_0_2" [shape=rectangle, label="[2] LOAD bits3[0] bits integers[0]"];
    "block_0_2" -> "block_0_end" [label="ordering"];
    "block_0_end" [shape=circle, label="end"];
  }
}
